<!--
  ~    Copyright 2018 Fabien Boismoreau
  ~
  ~    Licensed under the Apache License, Version 2.0 (the "License");
  ~    you may not use this file except in compliance with the License.
  ~    You may obtain a copy of the License at
  ~
  ~        http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~    Unless required by applicable law or agreed to in writing, software
  ~    distributed under the License is distributed on an "AS IS" BASIS,
  ~    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~    See the License for the specific language governing permissions and
  ~    limitations under the License.
  -->

<resources>
    <string name="app_name">MusicalStructure</string>
    <string name="albums">albums</string>
    <string name="artists">artists</string>
    <string name="albumCover">cover of the album</string>
    <string name="artistPhoto">photo of the artist</string>
    <string name="shuffle">shuffle</string>
    <string name="previous">previous</string>
    <string name="play">play</string>
    <string name="next">next</string>
    <string name="replay">replay</string>
    <string name="gallery">Gallery</string>
    <string name="timeZero">00:00</string>
    <string name="noSongFile">This song has no file to play</string>
</resources>
